Tags use UUID's
- This allows us to give them interesting names (things that are not
  safe in a URL), and also ensures that all tags used exist in the
  'my_tags' collection.
- Also allows us to change the name of a tag in one place, and that name
  is changed globally.

--- a/tags.html
+++ b/tags.html
@@ -5,7 +5,8 @@ permalink: /tags/
 ---
 
 <ul class="undercover">
-  {% for tag in site.my_tags %}
+  {% assign all_tags = site.my_tags | sort: "tagname" %}
+  {% for tag in all_tags %}
     <li>
       <a href="{{ site.baseurl | append: tag.url }}" class="undercover">
         <span class="badge">{{ tag.tagname }}</span>
