Allow custom page description
- Using the `page.description` field, if present on the page.

--- a/rules.html
+++ b/rules.html
@@ -2,6 +2,7 @@
 layout: page
 title: Rules
 permalink: /rules/
+description: The list of all design rules on this site.
 ---
 
 <ul class="undercover separator">
