--- a/rules.html
+++ b/rules.html
@@ -2,7 +2,7 @@
 layout: page
 title: Rules
 permalink: /rules/
-description: The list of all design rules on this site.
+description: List of all design rules on this site.
 ---
 
 <ul class="undercover separator">
